--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,56 @@
-.App {
+.mainContainer {
+  width: 60%;
+  background-color: #a8ffbe;
+  margin-left: 20%;
+  margin-top: 10vh;
+  border: 10px solid white;
+  border-radius: 10px;
+}
+
+.header {
+  background-color: #ffeba8;
   text-align: center;
+  padding: 2%;
 }
 
-.App-logo {
-  height: 40vmin;
+.gitLink {
+  text-decoration: none;
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+  padding: 2%;
+  border-bottom: 5px solid black;
 }
 
-.App-link {
-  color: #09d3ac;
+h3 {
+  margin: 2%;
+}
+
+.formContainer {
+  text-align: center;
+  margin-top: 1%;
+  margin-bottom: 2%;
+}
+
+.formContainer > h4 {
+  padding: 1%;
+}
+
+input {
+  width: 25%;
+}
+
+.todoContainer {
+  background-color: white;
+  width: 60%;
+  margin-left: 20%;
+  padding: 2%;
+  margin-bottom: 5%;
+}
+
+.todo {
+  text-align: center;
+  font-weight: bold;
+  padding: 1%;
 }
